# spotify-top-songs

./: .gitignore  Dockerfile  README.md  add_to_playlist.py  collect.py  models.py  pyproject.toml
src/: add_to_playlist.py  collect.py  models.py  parse_data.py
